# serializer version: 1
# name: test_overseerr_sensor[entry-approved_requests]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mock_title_approved_requests',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Approved requests',
    'platform': 'overseerr',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'requested_approved',
    'unique_id': '12345678904321-requested_approved',
    'unit_of_measurement': None,
  })
# ---
# name: test_overseerr_sensor[entry-available_requests]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mock_title_available_requests',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Available requests',
    'platform': 'overseerr',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'requested_available',
    'unique_id': '12345678904321-requested_available',
    'unit_of_measurement': None,
  })
# ---
# name: test_overseerr_sensor[entry-movie_requests]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mock_title_movie_requests',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Movie requests',
    'platform': 'overseerr',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'requested_movies',
    'unique_id': '12345678904321-requested_movies',
    'unit_of_measurement': None,
  })
# ---
# name: test_overseerr_sensor[entry-pending_requests]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mock_title_pending_requests',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pending requests',
    'platform': 'overseerr',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'requested_pending',
    'unique_id': '12345678904321-requested_pending',
    'unit_of_measurement': None,
  })
# ---
# name: test_overseerr_sensor[entry-total_requests]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mock_title_total_requests',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total requests',
    'platform': 'overseerr',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'requested_total',
    'unique_id': '12345678904321-requested_total',
    'unit_of_measurement': None,
  })
# ---
# name: test_overseerr_sensor[entry-tv_requests]
  None
# ---
# name: test_overseerr_sensor[state-approved_requests]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Approved requests',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_title_approved_requests',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '7',
  })
# ---
# name: test_overseerr_sensor[state-available_requests]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Available requests',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_title_available_requests',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_overseerr_sensor[state-movie_requests]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Movie requests',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_title_movie_requests',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_overseerr_sensor[state-pending_requests]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Pending requests',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_title_pending_requests',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '9',
  })
# ---
# name: test_overseerr_sensor[state-total_requests]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Total requests',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mock_title_total_requests',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24',
  })
# ---
# name: test_overseerr_sensor[state-tv_requests]
  None
# ---
